--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,11 +14,16 @@
   }
 }
 
-html,
-body {
+html {
   max-width: 100vw;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: clip;
 }
 
 body {
